revert: restore hackathon production version
